--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 				<div role="timer" aria-live="polite">
 					60
 				</div>
-				<form>
+				<form id="text">
+					<input type="text" value="This is some text"></input>
 				</form>
 			</section>
 		</section>
