I implemented the color changing og the letters as the user types them. Gren if the user typed correct letter, red, if the user typed wrong letter

--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
 				<div role="timer" aria-live="polite">
 					60
 				</div>
-				<form id="text">
-					<input type="text" value="This is some text"></input>
-				</form>
+				<div id="sentence"></div>
 			</section>
 		</section>
 
