--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 		<section class="auto center">
 			<p>Duration of the test:</p>
 			<div class="flex">
-				<button aria-label="Set duration to 1 minute">1</button>
-				<button aria-label="Set duration to 2 minutes">2</button>
-				<button aria-label="Set duration to 3 minutes">3</button>
+				<button aria-label="Set duration to 1 minute" onclick="createSentence(0)">1</button>
+				<button aria-label="Set duration to 2 minutes" onclick="createSentence(1)">2</button>
+				<button aria-label="Set duration to 3 minutes" onclick="createSentence(2)">3</button>
 			</div>
 		</section>
 		<section>
