Implementing timmer to cownt down

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 				Please typewrite the following text. The countdown will begin to run with your first key stroke.
 			</p>
 			<section class="flex">
-				<div role="timer" aria-live="polite">
-					60
+				<div id="time">
+					60:00
 				</div>
 				<div id="sentence"></div>
 			</section>
