Changing the "typo" message

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	</main>
 	
 	<footer class="center">
-		<p><b>Note:</b>Typos can be corrected by using the backspace key.</p>
+		<p><b>Note: </b>Typos can be corrected by simply typing the correct letter.</p>
 		<button>Restart </button>
 		<p class="text fade">Made with &hearts; by Valerian @ WellCode</p>
 	</footer>
