Implementing RESTART function

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	
 	<footer class="center">
 		<p><b>Note: </b>Typos can be corrected by simply typing the correct letter.</p>
-		<button>Restart </button>
+		<button onclick="restart()">Restart</button>
 		<p class="text fade">Made with &hearts; by Valerian @ WellCode</p>
 	</footer>
 
