--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<main>
 		
 		<section class="auto center">
-			<p>Duration of the test:</p>
+			<p>Please pick a duration to start the test:</p>
 			<div class="flex">
 				<button aria-label="Set duration to 1 minute" onclick="createSentence(0)">1</button>
 				<button aria-label="Set duration to 2 minutes" onclick="createSentence(1)">2</button>
@@ -24,7 +24,7 @@
 		</section>
 		<section>
 			<p class="center">
-				Please typewrite the following text. The countdown will begin to run with your first key stroke.
+				The countdown will begin to run with your first key stroke.
 			</p>
 			<section class="flex">
 				<div id="time">
