Optimising the info messages

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			</div>
 		</section>
 		<section>
-			<p class="center">
+			<p id="info1" class="center">
 				The countdown will begin to run with your first key stroke.
 			</p>
 			<section class="flex">
@@ -37,7 +37,7 @@
 	</main>
 	
 	<footer class="center">
-		<p id="information"><b>Note: </b>Typos can be corrected by simply typing the correct letter.</p>
+		<p id="info2"><b>Note: </b>Typos can be corrected by simply typing the correct letter.</p>
 		<button onclick="restart()">Restart</button>
 		<p class="text fade">Made with &hearts; by Valerian @ WellCode</p>
 	</footer>
