updating styles and also mooving info 2 and restart button outside of footer

--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
 				<div id="sentence"></div>
 			</section>
 		</section>
+		<section>
+			<p id="info2"><b>Note: </b>Typos can be corrected by simply typing the correct letter.</p>
+			<button onclick="restart()">Restart</button>
+		</section>
 
 	</main>
 	
 	<footer class="center">
-		<p id="info2"><b>Note: </b>Typos can be corrected by simply typing the correct letter.</p>
-		<button onclick="restart()">Restart</button>
 		<p class="text fade">Made with &hearts; by Valerian @ WellCode</p>
 	</footer>
 
