--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
 				The countdown will begin to run with your first key stroke.
 			</p>
 			<section class="flex">
-				<div id="time">
-					00
-				</div>
+				<div id="time">00</div>
 				<div id="sentence"></div>
 			</section>
 		</section>
