Adding a screen shot of the app

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			</section>
 		</section>
 		
-		<section class="center">
+		<section class="center margin">
 			<p id="info2" class="margin"><b>Note: </b>Typos can be corrected by simply typing the correct letter.</p>
 			<button class="brick" onclick="restart()">Restart</button>
 		</section>
